:Copyright: This document has been placed in the public domain.

.. contents::


Release 0.22b.dev (unpublished)
===============================

* General

  - Add tox.ini to pyproject.toml to be in sdist (bug #486).
  - Fix license issue (bug #487).

* docs/ref/docutils.dtd

  - Allow multiple <term> elements in a <definition_list_item>.
    Fixes feature-request #60

* docutils/frontend.py

  - Drop short options ``-i`` and ``-o`` for ``--input-encoding``
    and ``--output-encoding``.
  - Change the default input encoding from ``None`` (auto-detect) to "utf-8".

* docutils/nodes.py

  - Raise TypeError if the "rawsource" argument in `Element.__init__()`
    is an `Element` instance.
    Catches errors like ``nodes.hint(nodes.paragraph())``.
  - New element category classes `SubStructural` and `PureTextElement`.
  - Fix element categories.
  - New method `Element.validate()`: raise `nodes.ValidationError` if
    the element does not comply with the "Docutils Document Model".
    Provisional.
  - New "attribute validating functions"
    convert string representations to correct data type,
    normalize values,
    raise ValueError for invalid attribute names or values.
  - Removed `Element.set_class()`.

* docutils/parsers/docutils_xml.py

  - New parser for Docutils XML sources. Provisional.

* docutils/parsers/recommonmark_wrapper.py

  - New method `Parser.finish_parse()` to clean up (before validating).

* docutils/parsers/rst/directives/misc.py

  - Pass the included file's path to the parser when the
    "include" directive is used with :parser: option.
    Enables system messages with correct source/line indication.

* docutils/transforms/frontmatter.py

  - Update `DocInfo` to work with corrected element categories.

* docutils/transforms/misc.py:

  - Fix for `misc.Transitions`: report an error if a <transition> element
    follows a <meta> or <decoration> element as this is invalid
    according to ``docutils.dtd``.

* docutils/transforms/references.py
